[[release_notes]]
= Apache Kudu 1.1 Release Notes

:author: Kudu Team
:imagesdir: ./images
:icons: font
:toc: left
:toclevels: 3
:doctype: book
:backend: html5
:sectlinks:
:experimental:

[[rn_1.1.0]]

[[rn_1.1.0_new_features]]
== New features

XXX

== Optimizations and improvements

XXX

== Wire protocol compatibility

XXX

[[rn_1.1.0_incompatible_changes]]
== Incompatible changes in Kudu 1.1.0

XXX

[[known_issues_and_limitations]]
== Known Issues and Limitations

=== Schema and Usage Limitations
* Kudu is primarily designed for analytic use cases. You are likely to encounter issues if
  a single row contains multiple kilobytes of data.

* The columns which make up the primary key must be listed first in the schema.

* Key columns cannot be altered. You must drop and recreate a table to change its keys.

* Key columns must not be null.

* Columns with `DOUBLE`, `FLOAT`, or `BOOL` types are not allowed as part of a
  primary key definition.

* Type and nullability of existing columns cannot be changed by altering the table.

* A table’s primary key cannot be changed.

* Dropping a column does not immediately reclaim space. Compaction must run first.
There is no way to run compaction manually, but dropping the table will reclaim the
space immediately.

=== Partitioning Limitations
* Tables must be manually pre-split into tablets using simple or compound primary
  keys. Automatic splitting is not yet possible. Range partitions may be added
  or dropped after a table has been created. See
  link:schema_design.html[Schema Design] for more information.

* Data in existing tables cannot currently be automatically repartitioned. As a workaround,
  create a new table with the new partitioning and insert the contents of the old
  table.

=== Replication and Backup Limitations
* Kudu does not currently include any built-in features for backup and restore.
  Users are encouraged to use tools such as Spark or Impala to export or import
  tables as necessary.
