@@ -46,7 +46,14 @@ XXX
 [[rn_1.1.0_incompatible_changes]]
 == Incompatible changes in Kudu 1.1.0
 
-XXX
+=== Client APIs ({cpp}/Java/Python)
+
+- The {cpp} client library no longer requires the
+  link:https://gcc.gnu.org/onlinedocs/libstdc++/manual/using_dual_abi.html[old gcc5 ABI].
+  Which ABI is actually used depends on the compiler configuration. Some new distros
+  (e.g. Ubuntu 16.04) will use the new ABI. Your application must use the same ABI as is
+  used by the client library; an easy way to guarantee this is to use the same compiler
+  to build both.
 
 [[known_issues_and_limitations]]
 == Known Issues and Limitations
